--- a/css/section.scss
+++ b/css/section.scss
@@ -131,6 +131,8 @@ section.second.active {
   flex-direction: column;
   align-items: center;
   margin: 0 8% 8% 8%;
+  position: relative;
+  height: 100%;
   >.info-section {
     display: flex;
     flex-direction: column;
@@ -149,26 +151,21 @@ section.second.active {
 }
 section.third.active {
   img {
+    width: 60%;
+    height: auto;
     &:nth-child(1) {
-      width: 417px;
-      height: 507px;
       transform: rotate(-20deg);
       position: absolute;
-      right: 68%;
+      right: 60%;
       top: 50px;
     }
     &:nth-child(3) {
-      width: 417px;
-      height: 507px;
       transform: scaleX(-1) rotate(-20deg);
       position: absolute;
-      left: 73%;
+      left: 60%;
       top: 25px;
     }
-    &:nth-child(2) {
-      width: 537px;
-      height: 440px;
-    }
+
   }
   display: flex;
   align-items: center;
@@ -211,6 +208,7 @@ section.fourth.active {
       font-style: normal;
       font-weight: 600;
       line-height: 140%;
+      z-index: 99;
       &:first-child {
         left: 0;
         top: 169px;
@@ -229,6 +227,12 @@ section.fourth.active {
   justify-content: center;
   align-items: center;
   position: relative;
+  >.image-section{
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
 }
 .desc-container {
   display: flex;
